@@ -3,6 +3,8 @@
 '41' and '42' shortcuts for rulesets added
 Fixed bug 1928009 - Error using migration ruleset in PMD 4.2
 Fixed bug 1932242 - EmptyMethodInAbstractClassShouldBeAbstract false +
+Fixed bug 1808110 - PreserveStackTrace
+
 AvoidDuplicateLiteralRule now has 'skipAnnotations' boolean property
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
 Update RuleSetWriter to handle non-Apache TRAX implementations, add an option to not use XML Namespaces
